--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
     <!-- table representation -->
     <div class="table_rep">
-      <h3>Table representation of the SEO metric performance</h3>
+      <h3>Tablular representation of the SEO metric performance</h3>
       <pre id="output"></pre>
     </div>
     <!-- graphical representation -->
