--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
     <!-- table representation -->
     <div class="table_rep">
-      <h3>Tablular representation of the SEO metric performance</h3>
+      <h3>Tabular representation of the SEO metric performance</h3>
       <pre id="output"></pre>
     </div>
     <!-- graphical representation -->
@@ -50,10 +50,9 @@
       <canvas id="combinedChart"></canvas>
       <!-- Backlinks Graph -->
       <section>
-        <h4 class="sect_title">Backlinks</h4>
+        <h4 class="sect_title">Referring Domains</h4>
         <p class="desc">
-          <b>Backlinks (Ahrefs): </b>Backlinks are incoming links from other
-          websites to your site. They are a key factor in search engine ranking.
+          <b>Referring Domains (Ahrefs): </b>Referring domains are websites that contain links (also known as backlinks) pointing to another website. Each domain that provides such a link is considered a referring domain. In SEO, referring domains are important because they influence the authority and ranking of a website in search engine results.
         </p>
       </section>
       <canvas id="backlinksChart"></canvas>
