--- a/index.html
+++ b/index.html
@@ -48,14 +48,18 @@
         </p>
       </section>
       <canvas id="combinedChart"></canvas>
-      <!-- Backlinks Graph -->
+      <!-- Referring Domains Graph -->
       <section>
         <h4 class="sect_title">Referring Domains</h4>
         <p class="desc">
-          <b>Referring Domains (Ahrefs): </b>Referring domains are websites that contain links (also known as backlinks) pointing to another website. Each domain that provides such a link is considered a referring domain. In SEO, referring domains are important because they influence the authority and ranking of a website in search engine results.
+          <b>Referring Domains (Ahrefs): </b>Referring domains are websites that
+          contain links (also known as backlinks) pointing to another website.
+          Each domain that provides such a link is considered a referring
+          domain. In SEO, referring domains are important because they influence
+          the authority and ranking of a website in search engine results.
         </p>
       </section>
-      <canvas id="backlinksChart"></canvas>
+      <canvas id="refDomsChart"></canvas>
       <!-- Domain Rating Graph -->
       <section>
         <h4 class="sect_title">Domain Rating (DR)</h4>
@@ -116,6 +120,17 @@
         </p>
       </section>
       <canvas id="averageEngagementTimeChart"></canvas>
+      <!-- backlinks -->
+      <section>
+        <h4 class="sect_title">Backlinks</h4>
+        <p class="desc">
+          <b>Backlinks: </b>Links from one website to another, signaling to
+          search engines that the linked content is credible. They’re essential
+          for SEO, as high-quality backlinks can boost a website's search
+          rankings by showing its value and trustworthiness.
+        </p>
+      </section>
+      <canvas id="backlinksChart"></canvas>
     </div>
 
     <!-- Link to the JavaScript file -->
